--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,27 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop;
+    #    데이터베이스에 연결하기 위한 JDBC URL
+    url: jdbc:h2:tcp://localhost/~/jpashop
+    #    데이터베이스 연결을 위한 사용자 이름 H2의 기본 사용자 이름인 sa를 사용
     username: sa
+    #    데이터베이스 연결을 위한 비밀번호
     password:
+    #      JDBC 드라이버의 클래스 이름 H2 데이터베이스의 경우 org.h2.Driver를 사용
     driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
+      #      데이터베이스 스키마 자동 생성 전략을 설정 create는 애플리케이션 시작 시 데이터베이스 스키마를 새로 생성
       ddl-auto: create
     properties:
       hibernate:
-#        show_sql: true
-        format_sql: true
+      #          show_sql: true
+      #          Hibernate가 생성하는 SQL 쿼리의 가독성을 높이기 위해 SQL을 포맷팅할지 여부를 설정 true로 설정하면 SQL 쿼리가 보기 좋게 포맷팅
+      format_sql: true
 
 logging:
   level:
+    #    Hibernate가 실행하는 SQL 쿼리 로깅 레벨을 설정 debug 레벨로 설정하면 실행되는 SQL 쿼리가 로그에 출력
     org.hibernate.SQL: debug
+    #    SQL 쿼리의 파라미터와 결과값에 대한 자세한 정보를 로그에 출력하는 레벨을 설정 trace 레벨로 설정하면 더 상세한 정보를 로그에서 확인할 수 있음
     org.hibernate.orm.jdbc.bind: trace
-
