--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     #    데이터베이스에 연결하기 위한 JDBC URL
-    url: jdbc:h2:tcp://localhost/~/jpashop
+    url: jdbc:h2:mem:test
     #    데이터베이스 연결을 위한 사용자 이름 H2의 기본 사용자 이름인 sa를 사용
     username: sa
     #    데이터베이스 연결을 위한 비밀번호
